[package]
name = "chaos-symphony-network-bevy"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "^0.12"
chaos-symphony-async = { version = "^0.1", path = "../chaos-symphony-async" }
chaos-symphony-network = { version = "^0.1", path = "../chaos-symphony-network" }
tokio = { version = "^1", features = ["full"] }
tracing = "^0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
