[package]
name = "chaos-symphony-network"
version = "0.1.0"
edition = "2021"

[dependencies]
directories = "5.0.1"
quinn = "0.10.2"
rcgen = "0.11.3"
rustls = "0.21.10"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

[dev-dependencies]
tokio = { version = "1.35.0", features = ["full"] }
