[package]
name = "chaos-symphony-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "^0.12"
chaos-symphony-async = { version = "^0.1", path = "../chaos-symphony-async" }
chaos-symphony-bevy-network = { version = "^0.1", path = "../chaos-symphony-bevy-network" }
chaos-symphony-network = { version = "^0.1", path = "../chaos-symphony-network" }
tokio = { version = "^1", features = ["sync"] }
