[package]
name = "chaos-symphony-protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "^0.12"
chaos-symphony-async = { version = "^0.1", path = "../chaos-symphony-async" }
chaos-symphony-network = { version = "^0.1", path = "../chaos-symphony-network" }
chaos-symphony-network-bevy = { version = "^0.1", path = "../chaos-symphony-network-bevy" }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tokio = { version = "^1", features = ["sync"] }
