[package]
name = "chaos-symphony-simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.1"
chaos-symphony-network = { version = "0.1.0", path = "../chaos-symphony-network" }
tokio = { version = "1.35.0", features = ["full"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
