[package]
name = "chaos-symphony-simulation"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "^0.12"
chaos-symphony-bevy-network = { version = "^0.1", path = "../chaos-symphony-bevy-network" }
tokio = { version = "^1", features = ["full"] }
tracing = "^0.1"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
